# aws.iot.core.and.paho.client

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  go.work  main.py
golang/: go.mod  go.sum  main.go
rust/src/: main.rs
src/: main.rs  mosquitto.rs
src_go/: go.mod  main.go
